# sarif

./: CHANGELOG.md  CODEOWNERS  LICENSE  README.md  package.yaml  sarif.cabal
.github/workflows/: build.yml  publish.yml  stackage-nightly.yml
src/Data/: SARIF.hs
src/Data/Aeson/: Optional.hs
src/Data/SARIF/: Address.hs  Artifact.hs  ArtifactChange.hs  ArtifactContent.hs  ArtifactLocation.hs  Attachment.hs  AutomationDetails.hs  CodeFlow.hs  ConfigurationOverride.hs  Conversion.hs  Edge.hs  EdgeTraversal.hs  Exception.hs  ExternalProperties.hs  ExternalPropertyFileReference.hs  ExternalPropertyFileReferences.hs  Fix.hs  Graph.hs  GraphTraversal.hs  Invocation.hs  Level.hs  Location.hs  LocationRelationship.hs  Log.hs  LogicalLocation.hs  Message.hs  MultiformatMessageString.hs  Node.hs  Notification.hs  PhysicalLocation.hs  Rectangle.hs  Region.hs  Replacement.hs  ReportingConfiguration.hs  ReportingDescriptor.hs  ReportingDescriptorReference.hs  ReportingDescriptorRelationship.hs  Result.hs  ResultProvenance.hs  Run.hs  (+13 more)
