cabal-version:      3.0
name:               sarif
version:            0.2.0
synopsis:           SARIF implementation for Haskell
description:
  Provides types and JSON instances for the Static Analysis Results Interchange Format (SARIF).

category:           Data
homepage:           https://github.com/mbg/sarif#readme
bug-reports:        https://github.com/mbg/sarif/issues
author:             Michael B. Gale
maintainer:         github@michael-gale.co.uk, SiKai Lu<sikai@kth.se>
copyright:          Copyright (c) Michael B. Gale
license:            MIT
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/mbg/sarif

library
  exposed-modules:
    Data.SARIF
    Data.SARIF.Address
    Data.SARIF.Artifact
    Data.SARIF.ArtifactChange
    Data.SARIF.ArtifactContent
    Data.SARIF.ArtifactLocation
    Data.SARIF.Attachment
    Data.SARIF.AutomationDetails
    Data.SARIF.CodeFlow
    Data.SARIF.ConfigurationOverride
    Data.SARIF.Conversion
    Data.SARIF.Edge
    Data.SARIF.EdgeTraversal
    Data.SARIF.Exception
    Data.SARIF.ExternalProperties
    Data.SARIF.ExternalPropertyFileReference
    Data.SARIF.ExternalPropertyFileReferences
    Data.SARIF.Fix
    Data.SARIF.Graph
    Data.SARIF.GraphTraversal
    Data.SARIF.Invocation
    Data.SARIF.Level
    Data.SARIF.Location
    Data.SARIF.LocationRelationship
    Data.SARIF.Log
    Data.SARIF.LogicalLocation
    Data.SARIF.Message
    Data.SARIF.MultiformatMessageString
    Data.SARIF.Node
    Data.SARIF.Notification
    Data.SARIF.PhysicalLocation
    Data.SARIF.Rectangle
    Data.SARIF.Region
    Data.SARIF.Replacement
    Data.SARIF.ReportingConfiguration
    Data.SARIF.ReportingDescriptor
    Data.SARIF.ReportingDescriptorReference
    Data.SARIF.ReportingDescriptorRelationship
    Data.SARIF.Result
    Data.SARIF.ResultProvenance
    Data.SARIF.Run
    Data.SARIF.SpecialLocations
    Data.SARIF.Stack
    Data.SARIF.StackFrame
    Data.SARIF.Suppression
    Data.SARIF.ThreadFlow
    Data.SARIF.ThreadFlowLocation
    Data.SARIF.Tool
    Data.SARIF.ToolComponent
    Data.SARIF.ToolComponentReference
    Data.SARIF.TranslationMetadata
    Data.SARIF.VersionControlDetails
    Data.SARIF.WebRequest
    Data.SARIF.WebResponse

  other-modules:      Data.Aeson.Optional
  hs-source-dirs:     src
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    InstanceSigs
    LambdaCase
    OverloadedStrings
    RecordWildCards

  ghc-options:        -Wall
  build-depends:
    , aeson
    , base        >=4.8 && <5
    , bytestring
    , containers
    , text
    , time
    , uuid-types

  default-language:   GHC2021
